@@ -130,6 +130,7 @@ a:visited {
   }
   padding-bottom: 40px;
   width: 50vw;
+
 }
 
 .social-fb {
@@ -149,6 +150,10 @@ a:visited {
   border: 1px $darkPink solid;
   width: 20vw;
   height: 160px;
+  a {
+    text-decoration: none;
+    color: #4267b2;
+  }
 }
 
 .fading-on {
@@ -177,6 +182,10 @@ a:visited {
   border: 1px $darkPink solid;
   width: 20vw;
   height: 160px;
+  a {
+    text-decoration: none;
+    color: #e1306c;
+  }
 }
 
 .navigation {
@@ -439,6 +448,8 @@ button {
     transition-duration: 2s;
   }
 }
+
+
 
 .more {
   position: absolute;
@@ -715,8 +726,8 @@ button {
   background-repeat: no-repeat;
   background-size: cover;
 
-  h1 {
-    font-size: 2em;
+  h3 {
+    font-size: 4em;
     padding-top: 40px;
     padding-bottom: 40px;
   }
@@ -755,6 +766,16 @@ footer {
     width: 20%;
   }
   padding-top: 40px;
+}
+
+.footer-class-svg {
+  img {
+    width: 20%;
+  }
+  padding-top: 40px;
+  a {
+    color: $pink;
+  }
 }
 
 .social-footer {
