@@ -12,8 +12,8 @@ function Social() {
         <h1> Zapraszam na social media! </h1>
     </div>
      <div className='social'>
-        <div className='social-fb' > <FontAwesomeIcon icon={ faFacebook }  /> <p> Facebook </p> </div>
-        <div className='social-ig'> <FontAwesomeIcon icon={ faInstagram } /> <p> Instagram </p></div>
+        <div className='social-fb'> <a href='https://www.facebook.com/Jankowska.A.Fotografia'>  <FontAwesomeIcon icon={ faFacebook }  /> <p> Facebook </p> </a> </div>
+        <div className='social-ig'> <a href='https://www.instagram.com/jankowska_agnieszka_fotografia/'>  <FontAwesomeIcon icon={ faInstagram } /> <p> Instagram </p> </a> </div>
      </div>
       </div>
    
