@@ -1,4 +1,8 @@
 [X] portfolio panel need to be changed (talk to aga about rest of sub-websites)
-[] accesibility buttons with aria label, alternative with images and make menu list 
+[X] accesibility buttons with aria label, alternative with images and make menu list 
 [X] testing on mozilla, saffari ant other browsers i need to do more research on saffari browser
-[] text size 
+[X] text size 
+[X] social media link
+[] logo size and after click to main page
+[] form authentycation
+[] more photo
